# planning-templ

./: .clang-format  .gitignore  .gitlab-ci.yml  CITATION.cff  CMakeLists.txt  Dockerfile  Doxyfile.in  LICENSE  OntologyView.ui  README  README.md  TODOS.md  manifest.xml  manifest.xml~  resources.qrc
src/: CMakeLists.txt  CapacityLink.cpp  CapacityLink.hpp  Chronicle.hpp  Configuration.cpp  Configuration.hpp  Constant.cpp  Constant.hpp  Constraint.cpp  Constraint.hpp  ConstraintNetwork.cpp  ConstraintNetwork.hpp  DataPropertyAssignment.cpp  DataPropertyAssignment.hpp  Dummy.cpp  Dummy.hpp  Event.cpp  Event.hpp  LocationTimepointTuple.hpp  Logger.cpp  Logger.hpp  Logging.cpp  Logging.hpp  Main.cpp  Mission.cpp  Mission.hpp  MissionConstraint.cpp  MissionConstraint.hpp  MissionPlanner.cpp  MissionPlanner.hpp  MissionReaderMain.cpp  ObjectVariable.cpp  ObjectVariable.hpp  PathConstructor.cpp  PathConstructor.hpp  PersistenceCondition.cpp  PersistenceCondition.hpp  Plan.cpp  Plan.hpp  PlanSpaceVisitor.cpp  (+40 more)
src/benchmark/: MissionGenerator.cpp  MissionGenerator.hpp  VRPProblem.cpp  VRPProblem.hpp
src/benchmark/io/: GoldenReader.cpp  GoldenReader.hpp
src/constraints/: HyperConstraint.cpp  HyperConstraint.hpp  ModelConstraint.cpp  ModelConstraint.hpp  SimpleConstraint.cpp  SimpleConstraint.hpp
src/gui/: Main.cpp  MouseWheelGuard.cpp  MouseWheelGuard.hpp  SpatioTemporalRequirementItem.cpp  SpatioTemporalRequirementItem.hpp  TemplGui.cpp  TemplGui.hpp  TemplGui.ui  Utils.cpp  Utils.hpp
src/gui/MissionEditor/: MissionEditor.cpp  MissionEditor.hpp  MissionEditor.ui  MissionView.ui
src/gui/MissionView/: MissionView.cpp  MissionView.hpp
src/gui/OntologyView/: OntologyTreeModel.cpp  OntologyTreeModel.hpp  OntologyView.cpp  OntologyView.hpp  OntologyView.ui
src/gui/dialogs/: AddLocation.cpp  AddLocation.hpp  AddLocation.ui  AddModelConstraint.cpp  AddModelConstraint.hpp  AddModelConstraint.ui  AddTemporalConstraintQualitative.cpp  AddTemporalConstraintQualitative.hpp  AddTemporalConstraintQuantitative.cpp  AddTemporalConstraintQuantitative.hpp  EmptyDialog.ui
src/gui/edge_items/: CapacityLinkItem.cpp  CapacityLinkItem.hpp  RoleInfoItem.cpp  RoleInfoItem.hpp
src/gui/models/: AgentStyleModel.cpp  AgentStyleModel.hpp
src/gui/solution_analysis/: SolutionProperties.cpp  SolutionProperties.hpp  SolutionProperties.ui
src/gui/vertex_items/: RoleInfoItem.cpp  RoleInfoItem.hpp
src/gui/widgets/: Location.cpp  Location.hpp  Location.ui  ModelCardinality.cpp  ModelCardinality.hpp  ModelCardinality.ui  ModelConstraint.cpp  ModelConstraint.hpp  ModelConstraint.ui  PenStyle.cpp  PenStyle.hpp  PenStyle.ui  PropertyOverride.cpp  PropertyOverride.hpp  PropertyOverride.ui  SpatioTemporalRequirement.cpp  SpatioTemporalRequirement.hpp  SpatioTemporalRequirement.ui  TemporalConstraintQualitative.cpp  TemporalConstraintQualitative.hpp  TemporalConstraintQualitative.ui  TemporalConstraintQuantitative.cpp  TemporalConstraintQuantitative.hpp  TemporalConstraintQuantitative.ui
src/io/: FluentTypes.cpp  FluentTypes.hpp  LatexWriter.cpp  LatexWriter.hpp  MissionReader.cpp  MissionReader.hpp  MissionRequirements.cpp  MissionRequirements.hpp  MissionWriter.cpp  MissionWriter.hpp  TemporalConstraint.cpp  TemporalConstraint.hpp
src/object_variables/: Location.hpp  LocationCardinality.hpp
src/problems/: Scheduling.cpp  Scheduling.hpp
src/solvers/: Constraint.cpp  Constraint.hpp  ConstraintNetwork.cpp  ConstraintNetwork.hpp  Cost.cpp  Cost.hpp  FluentTimeResource.cpp  FluentTimeResource.hpp  GQReasoner.cpp  GQReasoner.hpp  Session.cpp  Session.hpp  Solution.cpp  Solution.hpp  SolutionAnalysis.cpp  SolutionAnalysis.hpp  SolutionSimulation.cpp  SolutionSimulation.hpp  Solver.cpp  Solver.hpp  StoppingCriteria.hpp  Variable.cpp  Variable.hpp
src/solvers/agent_routing/: Agent.cpp  Agent.hpp  AgentInstanceRequirement.cpp  AgentInstanceRequirements.hpp  AgentIntegerAttribute.cpp  AgentIntegerAttribute.hpp  AgentRoutingGraph.cpp  AgentRoutingGraph.hpp  AgentRoutingProblem.cpp  AgentRoutingProblem.hpp  AgentTask.cpp  AgentTask.hpp  AgentType.cpp  AgentType.hpp  ArpIO.cpp  ArpIO.hpp
src/solvers/csp/: ConstraintMatrix.cpp  ConstraintMatrix.hpp  Context.cpp  Context.hpp  (+28 more)
src/symbols/: Constant.cpp  Constant.hpp  ObjectVariable.cpp  ObjectVariable.hpp  StateVariable.cpp  StateVariable.hpp  Value.cpp  Value.hpp
src/utils/: CSVLogger.cpp  CSVLogger.hpp  CartographicMapping.cpp  CartographicMapping.hpp  Index.hpp  Logger.cpp  Logger.hpp  MissionGeneratorMain.cpp  MissionPlannerMain.cpp  MissionReaderMain.cpp  NarrowMission.cpp  PathConstructor.cpp  PathConstructor.hpp  SolutionAnalyserMain.cpp  SolutionSimulationHelpers.cpp  SolutionSimulationHelpers.hpp  SolverMain.cpp  TCNBenchmark.cpp  TemporalConstraintNetworkMain.cpp  TransportNetworkPlannerMain.cpp  XMLTCNUtils.cpp  XMLTCNUtils.hpp  XMLUtils.cpp  XMLUtils.hpp
src/values/: Int.hpp
test/: CMakeLists.txt  CMakeLists.txt~  suite.cpp  test_Benchmarks.cpp  test_CartographicMapping.cpp  test_Configuration.cpp  test_Constraints.cpp  test_Dummy.cpp  test_Elements.cpp  test_IO.cpp  test_IntervalConstraint.cpp  test_LoosePathConsistency.cpp  test_Mission.cpp  test_Planning.cpp  test_PointAlgebra.cpp  test_QualitativeTemporalConstraintNetwork.cpp  test_RoleInfo.cpp  test_Scheduling.cpp  test_SimpleTemporalNetwork.cpp  test_Solution.cpp  test_Symbols.cpp  test_TemporalAssertion.cpp  test_TemporalConstraintNetwork.cpp  test_TimePoint.cpp  test_Timeline.cpp  test_Utils.cpp  test_utils.hpp
test/data/: example-mission.xml  om-schema-v0.10.owl  om-schema-v0.11.owl  om-schema-v0.12.owl  om-schema-v0.13.owl  om-schema-v0.8.owl  test-mission-0.xml  test-mission-1.xml  test-mission-max.xml
test/solvers/: test_AgentRoutingProblem.cpp  test_CSP.cpp  test_FluentTimeResource.cpp  test_MissionConstraints.cpp  test_Propagators.cpp  test_Propagators_IsPath.cpp  test_Propagators_IsValidTransportEdge.cpp  test_SolutionAnalysis.cpp  test_SolutionSimulation.cpp  test_TemporalCSP.cpp  test_TemporallyExpandedGraph.cpp  test_TemporallyExpandedGraph.hpp  test_TransportNetwork.cpp
(+315 files in other folders)
